--- a/multiple_line_Chart.html
+++ b/multiple_line_Chart.html
@@ -46,7 +46,7 @@
 
 <body>
 
-<font style="font-size:11px;">Change metric:</font>
+<font style="font-size:11px;">選擇商品類型:</font>
 <select id="selectbox">
     <option value="動物產品">動物產品</option>
     <option value="植物產品">植物產品</option>
